--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@
 #Sat Mar 12 05:53:50 MSK 2016
 APP_VERSION_CODE=4082
 APP_VERSION_NAME=10.2.6
-APP_PACKAGE=org.telegram.messenger
+APP_PACKAGE=ru.handydev.telegram.messenger
 org.gradle.jvmargs=-Xmx4096M -XX:MaxPermSize=4096m
 org.gradle.daemon=true
 org.gradle.parallel=true
